--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="70">
   <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand">Candace Fisher</a>
+    <a class="navbar-brand p-2">Candace Fisher</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
@@ -54,8 +54,8 @@
     <div class="container">
       <h2>Projects</h2>
       <ul class="list-unstyled">
-        <li><a href="https://github.com/yourusername/project1" target="_blank">Project 1</a></li>
-        <li><a href="https://github.com/yourusername/project2" target="_blank">Project 2</a></li>
+        <li><a href="https://github.com/CeeFish/my_portfolio" target="_blank">My Portfolio</a></li>
+        <li><a href="https://github.com/CodeTheDream/upstate" target="_blank">UpState</a></li>
       </ul>
     </div>
   </section>
