--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,7 +46,7 @@
   <section id="bio" class="bg-light text-center">
     <div class="container">
       <h2>About Me</h2>
-      <p>I'm a full-stack software developer with experience in Ruby on Rails, Python, and building web applications.</p>
+      <p>I am a Software Developer with years of experience in designing, developing, and maintaining a high-performance web application. My expertise includes Ruby on Rails, JavaScript, RESTful APIs, and Python. My experience spans code migration, UI enhancements, automation, production support, and performance optimization. I am also skilled in database management, third-party API integrations, and building scalable, secure solutions. Beyond development, I actively engage in code reviews, agile methodologies, and cross-functional collaboration to drive business value. I have a solid understanding of Microsoft Power BI to enhance productivity and analyze data. I am passionate about continuous learning, problem-solving, and crafting software solutions that enhance user experience and operational efficiency. Let's connect to explore how I can contribute to your next project!</p>
     </div>
   </section>
 
