Using importmap for Python integration and setting up fetch for dynamic projects.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <section id="about" class="py-5">
   <%= render "home/pages/about" %>
 </section>
-<section id="about" class="py-5">
+<section id="projects" class="py-5">
   <%= render "home/pages/projects" %>
 </section>
-<section id="about" class="py-5">
+<section id="courses-and-certifications" class="py-5">
   <%= render "home/pages/courses_and_certifications" %>
 </section>
-<section id="about" class="py-5">
+<section id="contact" class="py-5">
   <%= render "home/pages/contact" %>
 </section>
