--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
     <a href="https://linkedin.com/in/candace-fisher-mba-developer/" target="_blank" class="text-white fs-4">
       <i class="bi bi-linkedin"></i>
     </a>
-    <a href="mailto:youremail@example.com" class="text-white fs-4">
+    <a href="mailto:candace.fisher.mba@gmail.com" class="text-white fs-4">
       <i class="bi bi-envelope"></i>
     </a>
   </div>
