Added correct course description names and made changes to the readme.

--- a/app/views/home/pages/_courses_and_certifications.html.erb
+++ b/app/views/home/pages/_courses_and_certifications.html.erb
@@ -3,16 +3,19 @@
     <h2>Courses and Certifications</h2>
     <ul class="list-unstyled">
       <li>
-        <a href="#" target="_blank">The Complete Web Developer in 2023: Zero to Mastery</a>
+        <a href="#" target="_blank">Stanford Code in Place</a>
       </li>
       <li>
-        <a href="#" target="_blank">Complete Python Developer in 2023: Zero to Mastery</a>
+        <a href="#" target="_blank">CTD: Rails Practicum</a>
       </li>
       <li>
-        <a href="#" target="_blank">The Complete JavaScript Course 2023: From Zero to Expert!</a>
+        <a href="#" target="_blank">CTD: Advanced Ruby on Rails</a>
       </li>
       <li>
-        <a href="#" target="_blank">Ruby on Rails 6 Bootcamp</a>
+        <a href="#" target="_blank">CTD: Intro to Programming</a>
+      </li>
+      <li>
+        <a href="#" target="_blank">GA: Data Analysis</a>
       </li>
     </ul>
   </div>
