--- a/app/views/home/pages/_projects.html.erb
+++ b/app/views/home/pages/_projects.html.erb
@@ -1,7 +1,7 @@
 <section id="initial-projects" class="text-center">
   <div class="container">
     <h2>Projects</h2>
-    <div class="row mb-5">
+    <div class="row mb-5 justify-content-center">
       <% if @initial_projects.present? %>
         <% @initial_projects.each do |p| %>
           <div class="col-md-4 mb-4">
