Added pdfs to courses and certs.

--- a/app/views/home/pages/_about.html.erb
+++ b/app/views/home/pages/_about.html.erb
@@ -2,9 +2,9 @@
   <div class="container">
     <h2>About Me</h2>
     <p>
-      I am a Software Developer with years of experience in designing, developing, and
+      I am a Software Developer with experience in designing, developing, and
       maintaining high-performance web applications. My expertise includes Ruby on Rails,
-      JavaScript, RESTful APIs, and Python. My experience spans code migration, UI
+      JavaScript, RESTful APIs, Python, and Flask. My experience spans code migration, UI
       enhancements, automation, production support, and performance optimization. I am
       also skilled in database management, third-party API integrations, and building
       scalable, secure solutions. Beyond development, I actively engage in code reviews,
