--- a/app/views/home/pages/_projects.html.erb
+++ b/app/views/home/pages/_projects.html.erb
@@ -9,7 +9,7 @@
               <% Array(p["image_urls"]).each_with_index do |img, i| %>
                 <img src="<%= img %>" class="card-img-top" alt="<%= p["name"] %> screenshot <%= i + 1 %>">
               <% end %>
-              <div class="card-body">
+              <div class="card-body text-center">
                 <h5 class="card-title"><%= p["name"] %></h5>
                 <p class="card-text"><%= p["description"] %></p>
                 <a href="<%= p["url"] %>" target="_blank" class="btn btn-outline-primary">
@@ -30,7 +30,7 @@
 
 <section id="dynamic-projects" class="container">
   <h2 class="text-center">GitHub Projects</h2>
-  <div class="row" id="dynamic-projects-container">
+  <div class="row justify-content-center" id="dynamic-projects-container">
     <div class="col-12 text-center text-muted">Loading dynamic projects...</div>
   </div>
 </section>
@@ -53,7 +53,7 @@
 
         col.innerHTML = `
           <div class="card h-100">
-            <div class="card-body">
+            <div class="card-body text-center">
               <h5 class="card-title">${project.name}</h5>
               <p class="card-text">${project.description}</p>
               <a href="${project.html_url}" target="_blank" class="btn btn-outline-primary">
